5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1800_2565.log
== TEST (2019-06-06 11:43:23) 
-- CODE:
med = array(eval(input("media dos alunos: ")))
fre = array(eval(input("frequencia do aluno: ")))
carh = array(eval(input("carga horaria: ")))

vet = zeros(3,dtype=int)

for x in range(0,size(med)):
	if(med[x] >= 5)and(fre[x]>=(carh[x]*0,75)):
		vet[0] = vet[0] +1
	elif(med[x] < 5)and(fre[x]>=(carh[x]*0,75)):
		vet[1] = vet[1] +1
	else:
		vet[2] = vet[2] +1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    med = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:44:13) 
-- CODE:
from numpy import*
med = array(eval(input("media dos alunos: ")))
fre = array(eval(input("frequencia do aluno: ")))
carh = array(eval(input("carga horaria: ")))

vet = zeros(3,dtype=int)

for x in range(0,size(med)):
	if(med[x] >= 5)and(fre[x]>=(carh[x]*0,75)):
		vet[0] = vet[0] +1
	elif(med[x] < 5)and(fre[x]>=(carh[x]*0,75)):
		vet[1] = vet[1] +1
	else:
		vet[2] = vet[2] +1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:45:37) 
-- CODE:
from numpy import*
med = array(eval(input("media dos alunos: ")))
fre = array(eval(input("frequencia do aluno: ")))
carh = 60

vet = zeros(3,dtype=int)

for x in range(0,size(med)):
	if(med[x] >= 5)and(fre[x]>=(carh*0,75)):
		vet[0] = vet[0] +1
	elif(med[x] < 5)and(fre[x]>=(carh*0,75)):
		vet[1] = vet[1] +1
	else:
		vet[2] = vet[2] +1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 11:46:48) 
-- CODE:
from numpy import*
med = array(eval(input("media dos alunos: ")))
fre = array(eval(input("frequencia do aluno: ")))
carh = int(input("cargahoraria: "))

vet = zeros(3,dtype=int)

for x in range(0,size(med)):
	if(med[x] >= 5)and(fre[x]>=(carh*0,75)):
		vet[0] = vet[0] +1
	elif(med[x] < 5)and(fre[x]>=(carh*0,75)):
		vet[1] = vet[1] +1
	else:
		vet[2] = vet[2] +1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:15:43) 
-- CODE:
from numpy import*
med = array(eval(input("media dos alunos: ")))
fre = array(eval(input("frequencia do aluno: ")))
carh = int(input("cargahoraria: "))

vet = zeros(3,dtype=int)

for x in range(0,size(med)):
	if(med[x] >= 5)and(fre[x]>=(carh*0,75)):
		vet[0] = vet[0] +1
	elif(med[x] < 5)and(fre[x]>=(carh*0,75)):
		vet[1] = vet[1] +1
	else:
		vet[2] = vet[2] +1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 14:28:40) 
-- CODE:
from numpy import*
med = array(eval(input("media dos alunos: ")))
fre = array(eval(input("frequencia do aluno: ")))
carh = int(input("cargahoraria: "))

vet = zeros(3,dtype=int)

for x in range(0,size(med)):
	if(med[x] >= 5) and (fre[x]>=(carh*0,75)):
		vet[0] = vet[0] +1
	elif(med[x] < 5)and(fre[x]>=(carh*0,75)):
		vet[1] = vet[1] +1
	else:
		vet[2] = vet[2] +1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:07:53) 
-- CODE:
from numpy import*
med = array(eval(input("media dos alunos: ")))
fre = array(eval(input("frequencia do aluno: ")))
carh = int(input("cargahoraria: "))

vet = zeros(3,dtype=int)

for x in range(0,size(med)):
	if(med[x] >= 5) and (fre[x]>=(carh*0,75)):
		vet[0] = vet[0] +1
	elif(med[x] < 5)and(fre[x]>=(carh*0,75)):
		vet[1] = vet[1] +1
	else:
		vet[2] = vet[2] +1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 10:34:54) 
-- CODE:
from numpy import*
med = array(eval(input("media dos alunos: ")))
fre = array(eval(input("frequencia do aluno: ")))
carh = int(input("cargahoraria: "))

vet = zeros(3,dtype=int)

for x in range(0,size(med)):
	if(med[x] >= 5) and (fre[x]>=(carh*0.75)):
		vet[0] = vet[0] +1
	elif(med[x] < 5)and(fre[x]>=(carh*0.75)):
		vet[1] = vet[1] +1
	else:
		vet[2] = vet[2] +1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 10:35:44) 
-- CODE:
from numpy import*
med = array(eval(input("media dos alunos: ")))
fre = array(eval(input("frequencia do aluno: ")))
carh = int(input("cargahoraria: "))

vet = zeros(3,dtype=int)

for x in range(0,size(med)):
	if(med[x] >= 5) and (fre[x]>=(carh*0.75)):
		vet[0] = vet[0] +1
	elif(med[x] < 5)and(fre[x]>=(carh*0.75)):
		vet[1] = vet[1] +1
	else:
		vet[2] = vet[2] +1
print(vet)
-- EXECUTION TIME:
0.982478
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
